# Selfplay_Gomoku

./: README.MD  close_local.sh  play_local.sh  stop_local.sh  train_local.sh
common/: common_flags.py
docker/: Dockerfile.gym  build.sh
gomoku/: actor.py  actor_ckpt.py  actor_eval.py  actor_eval_embryo.py  env.py  learner.py  networks.py  networks_large.py  rm_log.sh  run.sh  run_dist.sh  vtrace_main.py
gomoku/envs/: CMakeLists.txt  build.sh  gomoku.py  gomoku_ai.py  gomoku_embryo.py  gomoku_vec_run.py
gomoku/envs/embryo/: new_protocol.py  utility.py
gomoku/envs/src/: gomoku.cpp  gomoku.h  library.cpp  test.py
